--- a/ModelTraining.ipynb
+++ b/ModelTraining.ipynb
@@ -714,7 +714,7 @@
         "    tf.config.experimental.set_memory_growth(gpu, True)\n",
         "\n",
         "# PROVIDE PATH TO IMAGE DIRECTORY\n",
-        "IMAGE_PATHS = '/content/training_demo/images/check/halfdollar-check1.jpg'\n",
+        "IMAGE_PATHS = '/content/training_demo/images/check/20220616_162257.jpg'\n",
         "\n",
         "\n",
         "# PROVIDE PATH TO MODEL DIRECTORY\n",
@@ -796,7 +796,8 @@
         "detections['detection_classes'] = detections['detection_classes'].astype(np.int64)\n",
         "\n",
         "image_with_detections = image.copy()\n",
-        "\n",
+        "if not detections:\n",
+        "  print(\"nothing detected\")\n",
         "# SET MIN_SCORE_THRESH BASED ON YOU MINIMUM THRESHOLD FOR DETECTIONS\n",
         "viz_utils.visualize_boxes_and_labels_on_image_array(\n",
         "      image_with_detections,\n",
@@ -845,7 +846,7 @@
       },
       "outputs": [],
       "source": [
-        "!zip -r training_demo.zip training_demo"
+        "!zip -r exported_model.zip exported_models/"
       ]
     },
     {
@@ -856,8 +857,19 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "!python export_tflite_graph_tf2.py --pipeline_config_path=/content/training_demo/models/my_ssd_resnet101_v1_fpn/pipeline.config --trained_checkpoint_dir=/content/training_demo/models/my_ssd_resnet101_v1_fpn --output_directory=/content/training_demo/export_tflite"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!zip -r tflite_model.zip export_tflite/"
+      ],
+      "metadata": {
+        "id": "uOORO7vVNgW8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
@@ -868,7 +880,7 @@
       "name": "ModelTraining.ipynb",
       "provenance": [],
       "mount_file_id": "1r1DRDj6yHjuLMIPoHsa3NuwwffYJl3pM",
-      "authorship_tag": "ABX9TyMuJ1P2dHs/Q9RIIwHssmuY"
+      "authorship_tag": "ABX9TyPzJ7WAB05J+S92CeluCIc8"
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -876,7 +888,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
